--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -262,7 +262,7 @@
 		                      <th width="12%">
 								  累计社员总数
 								  <font id="showcountstore" style="color:#ffcc00;font-size:14px;font-weight:normal;">！</font>
-								  <font id="hidecountstore" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:20px">截止到当前时间累计社员总数，与开卡时间无关</font>
+								  <font id="hidecountstore" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">截止到当前累计社员总数</font>
 							  </th>
 		                    </tr>
 	                    </tbody>
@@ -352,7 +352,7 @@
 		                      <th width="12%">
 								  累计社员总数
 								  <font id="showcountcity" style="color:#ffcc00;font-size:14px;font-weight:normal;">！</font>
-								  <font id="hidecountcity" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:60px">截止到当前时间累计社员总数，与开卡时间无关</font>
+								  <font id="hidecountcity" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:125px">截止到当前累计社员总数</font>
 							  </th>
 		                    </tr>
 	                    </tbody>
@@ -451,7 +451,7 @@
 									  <th width="12%">
 										  累计试用社员总数（有效期内）
 										  <font id="showcounttry" style="color:#ffcc00;font-size:14px;font-weight:normal;">！</font>
-										  <font id="hidecounttry" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:20px">截止到当前时间累计社员总数，与开卡时间无关</font>
+										  <font id="hidecounttry" style="color:#47b8ef;font-size: 12px;white-space: nowrap;position: absolute;top:-8px;z-index: 1000;display:none;left:100px">截止到当前累计试用社员总数</font>
 									  </th>
 								  </tr>
 								  </tbody>
