用户简报文案布局优化

--- a/WebContent/crm/user_analysis.html
+++ b/WebContent/crm/user_analysis.html
@@ -151,8 +151,10 @@
                             <div class="pull-left yonghu yonghu3 text-center" id="yonghu3"><span id="userR1">无效用户<br>5</span></div>
                             <div class="pull-left yonghu yonghu5 text-center" id="yonghu5"><span id="userR5">无交易用户<br>5</span></div>
                         </div>
-                        <p class="col-sm-12" style="padding-top: 5px;color: #777">口径说明：1、真实用户=社员+历史消费3次以上+400购物，无效用户=仅消费1次且从未使用app的用户。</p>
-                        <p class="col-sm-12" style="padding-top: 3px;padding-left: 85px;color: #777">2、僵尸用户=2018年未消费，待确认用户=注册人数-真实用户-无效用户-僵尸用户-无交易用户。</p>
+                        <p class="col-sm-12" style="padding-top: 5px;color: #777">口径说明：1、真实用户=社员+历史消费3次以上+400购物。</p>
+                        <p class="col-sm-12" style="padding-top: 3px;padding-left: 85px;color: #777">2、无效用户=仅消费1次且从未使用app的用户。</p>
+                        <p class="col-sm-12" style="padding-top: 3px;padding-left: 85px;color: #777">3、僵尸用户=2018年未消费。</p>
+                        <p class="col-sm-12" style="padding-top: 3px;padding-left: 85px;color: #777">4、待确认用户=注册人数-真实用户-无效用户-僵尸用户-无交易用户。</p>
                     </div>
                 </div>
                 <div class="box box-default">
