--- a/WebContent/crm/userOperationStat_view.html
+++ b/WebContent/crm/userOperationStat_view.html
@@ -110,7 +110,7 @@
     .yichang .type_con{background: url("dist/img/gonghai(2).png") no-repeat; background-size: 100% 100%;}
     .gonghai:hover .type_con,.yichang:hover .type_con{display: block;}
     .fold-con{display: none;}
-    .auto{max-height:200px; overflow-y:scroll;}
+    .auto{max-height:200px; overflow-y:scroll;border: 0px solid #dedede;}
     .sl-v-list-radio input{margin:0px 0 0}
 
 	.checkboxFive {width: 20px;position: relative; margin: 20px 20px 20px 0; padding-left: 10px;}
